изменен вызов конструкторов в дочерних классов, метод принт в базовых классах сделан чисто виртуальным. (также в классе чайлд2 я подключила пространства имен атрибутов базовых классов, т.к. в методе принт в классе чайл2 не могла вывести переменные базовых классов и по запросу о наследовании шаблонных классов в каком-то треде промелькнула эта деталь и мы врде как проходили пространства имен, поэтому решила воспользоваться

--- a/Project8.vcxproj.filters
+++ b/Project8.vcxproj.filters
@@ -21,9 +21,24 @@
     <ClCompile Include="base.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="child1.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="child2.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="base.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="child1.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="child2.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Header.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
