--- a/Project8.vcxproj
+++ b/Project8.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4766e2af-9740-4cb5-ad9a-6e15dccd4c54}</ProjectGuid>
-    <RootNamespace>Project7</RootNamespace>
+    <ProjectGuid>{36c567ec-8263-44a1-af19-4923bcb4dd75}</ProjectGuid>
+    <RootNamespace>Project8</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,10 +128,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="base.cpp" />
+    <ClCompile Include="child1.cpp" />
+    <ClCompile Include="child2.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="base.h" />
+    <ClInclude Include="child1.h" />
+    <ClInclude Include="child2.h" />
+    <ClInclude Include="Header.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
